front end changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Phishing Email Detector</h1>
+        <h1>IITK Hackathon PS2</h1>
+        <h2>Phishing Email Detector</h2>
         <p>Enter the email content below to check if it’s phishing or not.</p>
         <form id="email-form">
             <textarea id="email_body" name="email_body" rows="6" placeholder="Paste email content here..."></textarea><br><br>
